_includes/css/contact.css
.hero-grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  column-gap: 2rem;
  padding: 4rem;
}

.hero--dark {
  background-color: #414141;
  padding: 3rem 3rem 0 3rem;
}

.hero__image {
  display: block;
}

.hero-grid h1 {
  font-size: 2.5rem;
  font-weight: 600;
  line-height: 3.25rem;
}

.hero-grid h2 {
  font-size: 1.125rem;
  font-weight: 600;
  text-transform: uppercase;
  line-height: 2rem;
  letter-spacing: 0.195em;
}

.bold {
  font-weight: 700;
}

.selfie__image {
  height: 10rem;
  width: 10rem;
  display: block;
}

h2,
p,
ul {
  letter-spacing: 0.195em;
}

.desktop p,
.details {
  font-size: 0.85rem;
}

@media (max-width: 991px) {
  .hero-grid h1 {
    font-size: 2rem;
  }

  .hero--dark {
    padding: 2rem 3rem 0 3rem;
  }
}

@media (max-width: 767px) {
  .hero-grid {
    grid-template-columns: 1fr;
    padding: 0;
    color: var(--color-header);
  }

  .hero--dark {
    display: grid;
    grid-auto-rows: 1fr 1.75fr 1fr;
    padding: 2rem 15%;
    color: var(--color-header);
    background: linear-gradient(to bottom, #e5e5e5 0%, #e5e5e5 50%, white 51%, white 100%);
  }

  .hero-grid h1 {
    font-size: 2.75rem;
  }

  .selfie {
    display: flex;
    align-items: center;
  }

  .selfie__image {
    height: 75%;
    width: 75%;
    margin-bottom: 0;
  }

  .details li {
    margin-bottom: 0.75rem;
  }

  .details li span {
    display: block;
    letter-spacing: 0.195em;
  }
}

